[package]
name = "claude-glow"
version = "0.1.0"
edition = "2021"
description = "Portable screen-edge ambient glow reflecting Claude Code's live status."

[[bin]]
name = "claude-glow"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
dirs = "5"
native-windows-gui = "1.0.13"
native-windows-derive = "1.0.5"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_UI_HiDpi",
]

# Small, self-contained release binary.
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
